# elyria-runtime-law

./: COMMERCIAL_ACCESS.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.sha256.json  PROJECT_STATUS.md  PROTECTED_SCOPE.md  README.md  REVIEWER_BRIEF.md  SECURITY.md  TERMUX_NOTE.md  pyproject.toml
.github/workflows/: ci.yml
app/: corridors.py  evaluator.py  main.py  models.py  receipts.py
docs/: BOUNDED_PROOF.md  CHEMISTRY_BIO_CORRIDOR_MAP.md  CONSEQUENCE_BOUNDARY_INFRASTRUCTURE.md  DEMO_SCRIPT.md  PRODUCTION_ENFORCEMENT_FABRIC.md  TERRY_BUILD_DIRECTIVE.md
elyria_runtime_law.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: bio_escalate_safety.json  bio_execute_review.json  chemistry_execute.json  chemistry_halt_guard.json  cyber_execute.json  cyber_redirect.json  cyber_refuse_authority.json
tests/: test_runtime.py
